--- a/sm/sm-b2b-connector/main/default/classes/B2B_SetupConstants.cls
+++ b/sm/sm-b2b-connector/main/default/classes/B2B_SetupConstants.cls
@@ -1,5 +1,7 @@
 public with sharing class B2B_SetupConstants {
 
+    public static final String NAMESPACE = '';
+
     public static final ServiceConfigurationModules MODULES = new ServiceConfigurationModules();
     public static final ServiceConfigurationConfigs CONFIGS = new ServiceConfigurationConfigs();
     public static final OracleApiConfigs ORACLE_CONFIGS = new OracleApiConfigs();
