--- a/sm/sm-b2b-connector/main/default/classes/RSM_PaymentMethodTest.cls
+++ b/sm/sm-b2b-connector/main/default/classes/RSM_PaymentMethodTest.cls
@@ -176,4 +176,14 @@ public class RSM_PaymentMethodTest {
         System.assertNotEquals(null, listOfStrings, 'Success');
         Test.stopTest();
     } */
+
+    static testMethod void buynowCalloutTest() {
+         User u =[Select id,ContactId from User WHERE firstname = 'ABC'];
+         Contact con = [Select id, name,firstname,lastName,email,phone from Contact Where id=:u.ContactId];
+         Test.setMock(HttpCalloutMock.class, new B2B_RestApiCallsMock());
+         Test.startTest();
+         RSM_paymentMethod.buynowCallout(con);
+         Test.stopTest();
+ 
+     }
 }
