add CALM filter, remove namespace

--- a/sm/sm-b2b-connector/main/default/classes/RSM_Subscription.cls
+++ b/sm/sm-b2b-connector/main/default/classes/RSM_Subscription.cls
@@ -37,8 +37,8 @@ global with sharing class RSM_Subscription {
                 List<NetworkMember> memberNetwork = new list<NetworkMember>();
                 List<Asset> assetList;
                 
-                assetList = Test.isRunningTest() ? new List<Asset>([SELECT Id, Payment_Method__c,  LifecycleStartDate, LifecycleEndDate, account.Name, TotalLifecycleAmount, Status, Product2Id, CreatedDate, Product2.IsActive, Product2.Name, Product2.Description FROM Asset WHERE AccountId = :uList.get(0).AccountId AND contactId =: uList.get(0).contactId AND Product2Id != null AND Product2.IsActive = true AND IsDeleted = false AND IsInternal = false  AND IsCompetitorProduct = false order by createdDate desc]) : new List<Asset>([SELECT Id, Payment_Method__c,  LifecycleStartDate, LifecycleEndDate, account.Name, TotalLifecycleAmount, Status, Product2Id, CreatedDate, Product2.IsActive, Product2.Name, Product2.Description FROM Asset WHERE AccountId = :uList.get(0).AccountId AND contactId =: uList.get(0).contactId AND Product2Id != null AND Product2.IsActive = true AND IsDeleted = false AND IsInternal = false AND IsCompetitorProduct = false WITH SECURITY_ENFORCED order by createdDate desc]);
-                allAssets = Test.isRunningTest() ? [SELECT Id FROM Asset WHERE AccountId = :uList.get(0).AccountId AND Product2Id != null AND Product2.IsActive = true AND IsDeleted = false AND IsInternal = false AND CurrentQuantity > 0 AND IsCompetitorProduct = false AND ID in (SELECT ReferenceEntityId from BillingScheduleGroup)] : [SELECT Id FROM Asset WHERE AccountId = :uList.get(0).AccountId AND Product2Id != null AND Product2.IsActive = true AND IsDeleted = false AND IsInternal = false AND CurrentQuantity > 0 AND IsCompetitorProduct = false AND ID in (SELECT ReferenceEntityId from BillingScheduleGroup) WITH SECURITY_ENFORCED];
+                assetList = Test.isRunningTest() ? new List<Asset>([SELECT Id, Payment_Method__c,  LifecycleStartDate, LifecycleEndDate, account.Name, TotalLifecycleAmount, Status, Product2Id, CreatedDate, Product2.IsActive, Product2.Name, Product2.Description FROM Asset WHERE AccountId = :uList.get(0).AccountId AND contactId =: uList.get(0).contactId AND Product2Id != null AND Product2.IsActive = true AND IsDeleted = false AND IsInternal = false  AND IsCompetitorProduct = false AND HasLifecycleManagement = TRUE order by createdDate desc]) : new List<Asset>([SELECT Id, Payment_Method__c,  LifecycleStartDate, LifecycleEndDate, account.Name, TotalLifecycleAmount, Status, Product2Id, CreatedDate, Product2.IsActive, Product2.Name, Product2.Description FROM Asset WHERE AccountId = :uList.get(0).AccountId AND contactId =: uList.get(0).contactId AND Product2Id != null AND Product2.IsActive = true AND IsDeleted = false AND IsInternal = false AND IsCompetitorProduct = false AND HasLifecycleManagement = TRUE WITH SECURITY_ENFORCED order by createdDate desc]);
+                allAssets = Test.isRunningTest() ? [SELECT Id FROM Asset WHERE AccountId = :uList.get(0).AccountId AND Product2Id != null AND Product2.IsActive = true AND IsDeleted = false AND IsInternal = false AND CurrentQuantity > 0 AND IsCompetitorProduct = false AND HasLifecycleManagement = TRUE AND ID in (SELECT ReferenceEntityId from BillingScheduleGroup)] : [SELECT Id FROM Asset WHERE AccountId = :uList.get(0).AccountId AND Product2Id != null AND Product2.IsActive = true AND IsDeleted = false AND IsInternal = false AND CurrentQuantity > 0 AND IsCompetitorProduct = false AND HasLifecycleManagement = TRUE AND ID in (SELECT ReferenceEntityId from BillingScheduleGroup) WITH SECURITY_ENFORCED];
     
                 for(Asset a : assetList ){
                     productIdsList.add(a.Product2Id);
