--- a/sm/sm-b2b-connector/main/default/classes/B2B_RestApiCalls.cls
+++ b/sm/sm-b2b-connector/main/default/classes/B2B_RestApiCalls.cls
@@ -1,4 +1,4 @@
-public class B2B_RestApiCalls {
+public with sharing class B2B_RestApiCalls {
 
     private static final DCM_Logger logger = DCM_Logger.getImmediateInstance('API Call');
 
